# DrillMind

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: column_registry.yaml  settings.yaml
dashboard/: app.js  index.html  styles.css
data/: README.md
data/raw/: .gitkeep
scripts/: _audit_columns.py  _check_rop.py  check_dashboard.py  final_check.py  preprocess.py  test_rag_pipeline.py  verify_classifier.py  verify_pipeline.py
src/drillmind/: __init__.py  config.py
src/drillmind/agents/: __init__.py  orchestrator.py  tools.py
src/drillmind/api/: __init__.py  server.py
src/drillmind/copilot/: __init__.py  context_builder.py  engine.py  prompt_templates.py
src/drillmind/data/: __init__.py  quality.py
src/drillmind/models/: __init__.py  anomaly_detection.py  drilling_kpis.py  event_classifier.py  feature_engineering.py  lstm_detector.py  rig_state.py
src/drillmind/parsers/: __init__.py  ddr_parser.py  depth_log_parser.py  production_parser.py  rop_parser.py  time_log_parser.py
src/drillmind/rag/: __init__.py  chunker.py  store.py
src/drillmind/streaming/: __init__.py  replay_engine.py
src/drillmind/utils/: __init__.py
tests/: conftest.py  test_ddr_rag.py  test_features.py  test_parsers.py  test_quality.py  test_rig_state.py
